--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "express-mysql-session": "^3.0.2",
     "express-session": "^1.18.0",
@@ -48,6 +49,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.0",
     "@types/ioredis": "^5.0.0",
