--- a/docker-compose.backup.yaml
+++ b/docker-compose.backup.yaml
@@ -12,70 +12,60 @@ services:
   #     - frontend
   mysql:
     image: mysql:8
-    container_name: mysql-auth
-    # restart: always
+    container_name: mysql-auth-${NODE_ENV}
+    restart: always
     volumes:
-      - ./data/mysqldata:/var/lib/mysql
-      # - ./config:/etc/mysql/conf.d # my.cnf 파일을 컨테이너에 복사
+      - ${MYSQL_VOLUME_PATH}:/var/lib/mysql
+      # - ${MYSQL_CONFIG_PATH}:/etc/mysql/conf.d # my.cnf 파일을 컨테이너에 복사
     command:
       - --bind-address=0.0.0.0 # MySQL 시작 시 bind-address를 0.0.0.0으로 설정
     ports:
-      - 3307:3306
-      # - ${MYSQL_OPEN_PORT}:3306
-    env_file:
-      - ./envs/env.local
+      - ${MYSQL_OPEN_PORT}:3306
+    # env_file:
+    #   - .env.${NODE_ENV}
     environment:
       # - MYSQL_ROOT_HOST=mysql-auth-${NODE_ENV}
-      # - MYSQL_USER=${MYSQL_USER}
-      # - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      # - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      # - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_CHARSET=utf8mb4
-      - MYSQL_COLLATION=utf8mb4_general_ci
-      - MYSQL_TIMEZONE=Asia/Seoul
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
       - TZ=Asia/Seoul
     networks:
       - network-auth
-
   redis:
     image: redis:alpine
-    container_name: redis-auth
-    # restart: always
+    container_name: redis-auth-${NODE_ENV}
+    restart: always
     volumes:
-      - ./data/redisdata:/data
-      # - ./config/redis.conf:/usr/local/etc/redis/redis.conf
-    # env_file:
-    #   - ./envs/env.local
+      - ${REDIS_VOLUME_PATH}:/data
     networks:
       - network-auth
-    # command: ['redis-server', '--requirepass', '${REDIS_PASSWORD}']
+    command: ['redis-server', '--requirepass', '${REDIS_PASSWORD}']
     ports:
-      - 6380:6379
+      - ${REDIS_OPEN_PORT}:6379
     depends_on:
       - mysql
-
   server:
-    container_name: server-auth
+    image: auth-server
+    container_name: server-auth-${NODE_ENV}
     build:
       context: .
-      dockerfile: Dockerfile
-      target: local
+      dockerfile: Dockerfile.${NODE_ENV}
     volumes:
       - ./src:/app/src
       - /app/node_modules # 익명 볼륨
     networks:
       - network-auth
     ports:
-      - 8000:8000
+      - ${PORT}:${PORT}
       - 9229:9229 # Node.js 디버깅 포트
     env_file:
-      - ./envs/env.local
+      - .env.${NODE_ENV}
     environment:
       - TZ=Asia/Seoul
     depends_on:
       - redis
       - mysql
-
 networks:
   network-auth:
     driver: bridge
