--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -13,17 +13,17 @@ services:
   mysql:
     image: mysql:8
     container_name: mysql-auth
-    # restart: always
+    restart: unless-stopped
     volumes:
       - ./data/mysqldata:/var/lib/mysql
       # - ./config:/etc/mysql/conf.d # my.cnf 파일을 컨테이너에 복사
     command:
       - --bind-address=0.0.0.0 # MySQL 시작 시 bind-address를 0.0.0.0으로 설정
     ports:
-      - 3307:3306
+      []
       # - ${MYSQL_OPEN_PORT}:3306
     env_file:
-      - ./envs/env.local
+      - ./envs/env.prod
     environment:
       # - MYSQL_ROOT_HOST=mysql-auth-${NODE_ENV}
       # - MYSQL_USER=${MYSQL_USER}
@@ -40,36 +40,33 @@ services:
   redis:
     image: redis:alpine
     container_name: redis-auth
-    # restart: always
+    restart: unless-stopped
     volumes:
       - ./data/redisdata:/data
       # - ./config/redis.conf:/usr/local/etc/redis/redis.conf
     # env_file:
-    #   - ./envs/env.local
+    #   - ./envs/env.prod
     networks:
       - network-auth
     # command: ['redis-server', '--requirepass', '${REDIS_PASSWORD}']
-    ports:
-      - 6380:6379
+    ports: []
     depends_on:
       - mysql
 
   server:
     container_name: server-auth
+    restart: unless-stopped
     build:
       context: .
       dockerfile: Dockerfile
-      target: local
-    volumes:
-      - ./src:/app/src
-      - /app/node_modules # 익명 볼륨
+      target: prodution
+    volumes: []
     networks:
       - network-auth
     ports:
-      - 8000:8000
-      - 9229:9229 # Node.js 디버깅 포트
+      - 80:8000
     env_file:
-      - ./envs/env.local
+      - ./envs/env.prod
     environment:
       - TZ=Asia/Seoul
     depends_on:
