feat(docker) - winston 도입으로 log 볼륨 추가

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -50,7 +50,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: prodution
-    volumes: []
+    volumes:
+      - ./logs:/app/logs # Log 동기화
     # networks:
     #   - network-auth
     ports: []
