--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@krgeobuk/database-config": "^1.0.0",
     "@krgeobuk/jwt": "^1.0.0",
     "@krgeobuk/oauth": "^1.0.0",
+    "@krgeobuk/shared": "^1.0.0",
     "@krgeobuk/swagger": "^1.0.0",
     "@krgeobuk/user": "^1.0.0",
     "@nestjs/axios": "^3.0.2",
@@ -54,12 +55,12 @@
     "ioredis": "^5.5.0",
     "joi": "^17.13.1",
     "mysql2": "^3.9.7",
+    "nest-winston": "^1.10.2",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
-    "nest-winston": "^1.10.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -70,6 +71,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^5.0.0",
