--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,26 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "endOfLine": "crlf"
+  "endOfLine": "crlf",
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports"
+  ],
+  "importOrder": [
+    "^node:",
+    "^@nestjs/",
+    "^[^@\\.]",
+    "^@krgeobuk/",
+    "^@common/",
+    "^@config$",
+    "^@config/",
+    "^@database$",
+    "^@database/",
+    "^@modules/",
+    "^@/",
+    "^\\.\\.\\./",
+    "^\\./[^/]+$",
+    "^\\."
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
