--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^5.0.0",
@@ -80,7 +79,9 @@
     "@types/supertest": "^6.0.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.2.0",
     "jest": "^29.5.0",
     "nodemon": "^3.1.10",
