chore(docker) - 네트워크명 변경

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -64,7 +64,9 @@ services:
     #   - mysql
 
 networks:
-  network-auth:
+  auth-network:
     driver: bridge
-  network-shared:
+  msa-network:
+    external: true
+  shared-network:
     external: true
