--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^10.4.19",
     "@nestjs/platform-express": "^10.4.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
@@ -80,8 +81,8 @@
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.2.0",
     "jest": "^29.5.0",
     "nodemon": "^3.1.10",
