feat(docker) - .npmrc ignore 추가 및 공통패키지 네트워크 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,6 +71,7 @@ services:
     networks:
       - auth-network
       - msa-network
+      - shared-network
     depends_on:
       - redis
       - mysql
