--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@krgeobuk/core": "^1.0.0",
     "@krgeobuk/database-config": "^1.0.0",
     "@krgeobuk/jwt": "^1.0.0",
-    "@krgeobuk/oauth": "^1.0.0",
     "@krgeobuk/shared": "^1.0.0",
     "@krgeobuk/swagger": "^1.0.0",
+    "@krgeobuk/oauth": "^1.0.0",
     "@krgeobuk/user": "^1.0.0",
+    "@krgeobuk/service": "^1.0.0",
+    "@krgeobuk/authorization": "^1.0.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
