feat - docker jwt keys 폴더 볼륨 마운트 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,7 @@ services:
     volumes:
       - ./src:/app/src:cached # 소스 코드 동기화
       - ./logs:/app/logs # Log 동기화
+      - ./keys:/app/keys # Jwt Key 동기화
       - ./tsconfig.json:/app/tsconfig.json # tsconfig도 동기화
       - ./nodemon.json:/app/nodemon.json # nodemon 설정도 동기화
       - /app/dist
