feat(env) - ALLOWED_REDIRECT_DOMAINS 변수 localhost 추가

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -15,7 +15,7 @@ APP_NAME=auth-server
 # 클라이언트 애플리케이션 URL
 AUTH_CLIENT_URL=http://localhost:3000
 PORTAL_CLIENT_URL=http://localhost:3200
-ALLOWED_REDIRECT_DOMAINS="localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
+ALLOWED_REDIRECT_DOMAINS="localhost, localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
 ALLOWED_REDIRECT_PROTOCOLS="http, https"
 
 ############ DOCKER ENV ###########
