feat - TCP 관련 env 추가

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -18,6 +18,13 @@ PORTAL_CLIENT_URL=http://localhost:3200
 ALLOWED_REDIRECT_DOMAINS="localhost, localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
 ALLOWED_REDIRECT_PROTOCOLS="http, https"
 
+############ EXTERNAL SERVICE ENDPOINTS ############
+# MSA 서비스 통신 설정
+AUTHZ_SERVICE_HOST=authz-server
+AUTHZ_SERVICE_PORT=8110
+PORTAL_SERVICE_HOST=portal-server
+PORTAL_SERVICE_PORT=8210
+
 ############ DOCKER ENV ###########
 # Docker 볼륨 경로 설정
 MYSQL_VOLUME_PATH=./data/mysqldata
