chore - hosts 파일 수정해서 local에서도 도메인 적용한 환경 구현

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -9,13 +9,13 @@ PORT=8000
 # TCP 마이크로서비스 포트 (서비스간 통신용)
 TCP_PORT=8010
 # CORS 허용 도메인 (콤마로 구분)
-CORS_ORIGINS="http://localhost:3000, http://127.0.0.1:3000, http://localhost:3010, http://127.0.0.1:3010, http://localhost:3200, http://127.0.0.1:3200"
+CORS_ORIGINS="http://krgeobuk.local:3000, http://localhost:3000, http://127.0.0.1:3000, http://krgeobuk.local:3010, http://localhost:3010, http://127.0.0.1:3010, http://krgeobuk.local:3200, http://localhost:3200, http://127.0.0.1:3200"
 # 애플리케이션 이름
 APP_NAME=auth-server
 # 클라이언트 애플리케이션 URL
-AUTH_CLIENT_URL=http://localhost:3000
-PORTAL_CLIENT_URL=http://localhost:3200
-ALLOWED_REDIRECT_DOMAINS="localhost, localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
+AUTH_CLIENT_URL=http://krgeobuk.local:3000
+PORTAL_CLIENT_URL=http://krgeobuk.local:3200
+ALLOWED_REDIRECT_DOMAINS="krgeobuk.local, krgeobuk.local:3000, krgeobuk.local:3010, krgeobuk.local:3200, krgeobuk.local:3210, localhost, localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
 ALLOWED_REDIRECT_PROTOCOLS="http, https"
 
 ############ EXTERNAL SERVICE ENDPOINTS ############
@@ -65,7 +65,7 @@ GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 # Google OAuth 클라이언트 시크릿 (Google Cloud Console에서 발급)
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Google OAuth 콜백 URL
-GOOGLE_REDIRECT_URL=http://localhost:8000/api/oauth/login-google/callback
+GOOGLE_REDIRECT_URL=http://krgeobuk.local:8000/api/oauth/login-google/callback
 # Google OAuth 토큰 URL (고정값)
 GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
 # Google 사용자 정보 API URL (고정값)
@@ -77,7 +77,7 @@ NAVER_CLIENT_ID=your-naver-client-id
 # Naver OAuth 클라이언트 시크릿 (Naver Developers에서 발급)
 NAVER_CLIENT_SECRET=your-naver-client-secret
 # Naver OAuth 콜백 URL
-NAVER_REDIRECT_URL=http://localhost:8000/api/oauth/login-naver/callback
+NAVER_REDIRECT_URL=http://krgeobuk.local:8000/api/oauth/login-naver/callback
 # Naver OAuth 토큰 URL (고정값)
 NAVER_TOKEN_URL=https://nid.naver.com/oauth2.0/token
 # Naver 사용자 정보 API URL (고정값)
