--- a/envs/.env.example
+++ b/envs/.env.example
@@ -9,13 +9,13 @@ PORT=8000
 # TCP 마이크로서비스 포트 (서비스간 통신용)
 TCP_PORT=8010
 # CORS 허용 도메인 (콤마로 구분)
-CORS_ORIGINS="http://krgeobuk.local:3000, http://localhost:3000, http://127.0.0.1:3000, http://krgeobuk.local:3010, http://localhost:3010, http://127.0.0.1:3010, http://krgeobuk.local:3200, http://localhost:3200, http://127.0.0.1:3200"
+CORS_ORIGINS="http://auth.krgeobuk.local:8000, http://localhost:8000, http://127.0.0.1:8000, http://auth.krgeobuk.local:3000, http://localhost:3000, http://127.0.0.1:3000, http://portal.krgeobuk.local:3200, http://portal-admin.krgeobuk.local:3210, http://mypick.krgeobuk.local:3010, http://mypick-admin.krgeobuk.local:3020"
 # 애플리케이션 이름
 APP_NAME=auth-server
 # 클라이언트 애플리케이션 URL
-AUTH_CLIENT_URL=http://krgeobuk.local:3000
-PORTAL_CLIENT_URL=http://krgeobuk.local:3200
-ALLOWED_REDIRECT_DOMAINS="krgeobuk.local, krgeobuk.local:3000, krgeobuk.local:3010, krgeobuk.local:3200, krgeobuk.local:3210, localhost, localhost:3000, 127.0.0.1:3000, localhost:3010, 127.0.0.1:3010, localhost:3200, 127.0.0.1:3200, localhost:3210, 127.0.0.1:3210"
+AUTH_CLIENT_URL=http://auth.krgeobuk.local:3000
+PORTAL_CLIENT_URL=http://portal.krgeobuk.local:3200
+ALLOWED_REDIRECT_DOMAINS="krgeobuk.local, auth.krgeobuk.local, auth.krgeobuk.local:3000, portal.krgeobuk.local:3200, portal-admin.krgeobuk.local:3210, mypick.krgeobuk.local:3010, mypick-admin.krgeobuk.local:3020, localhost, localhost:3000, 127.0.0.1:3000"
 ALLOWED_REDIRECT_PROTOCOLS="http, https"
 
 ############ EXTERNAL SERVICE ENDPOINTS ############
@@ -65,7 +65,7 @@ GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 # Google OAuth 클라이언트 시크릿 (Google Cloud Console에서 발급)
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Google OAuth 콜백 URL
-GOOGLE_REDIRECT_URL=http://krgeobuk.local:8000/api/oauth/login-google/callback
+GOOGLE_REDIRECT_URL=http://auth.krgeobuk.local:8000/api/oauth/login-google/callback
 # Google OAuth 토큰 URL (고정값)
 GOOGLE_TOKEN_URL=https://oauth2.googleapis.com/token
 # Google 사용자 정보 API URL (고정값)
@@ -77,7 +77,7 @@ NAVER_CLIENT_ID=your-naver-client-id
 # Naver OAuth 클라이언트 시크릿 (Naver Developers에서 발급)
 NAVER_CLIENT_SECRET=your-naver-client-secret
 # Naver OAuth 콜백 URL
-NAVER_REDIRECT_URL=http://krgeobuk.local:8000/api/oauth/login-naver/callback
+NAVER_REDIRECT_URL=http://auth.krgeobuk.local:8000/api/oauth/login-naver/callback
 # Naver OAuth 토큰 URL (고정값)
 NAVER_TOKEN_URL=https://nid.naver.com/oauth2.0/token
 # Naver 사용자 정보 API URL (고정값)
@@ -101,8 +101,8 @@ JWT_REFRESH_EXPIRES_IN=7d     # Refresh Token: 7일
 JWT_SESSION_COOKIE_PATH=/
 JWT_REFRESH_MAX_AGE=604800000    # 7일 (밀리초)
 # 쿠키 도메인 설정 (서브도메인 공유용)
-JWT_COOKIE_DOMAIN=.krgeobuk.com  # 프로덕션: .yourdomain.com (점으로 시작)
-JWT_COOKIE_DOMAIN_DEV=           # 개발환경: 빈값 (localhost 사용)
+JWT_COOKIE_DOMAIN=.krgeobuk.com      # 프로덕션: .yourdomain.com (점으로 시작)
+JWT_COOKIE_DOMAIN_DEV=.krgeobuk.local  # 개발환경: .krgeobuk.local (서브도메인 공유)
 
 # Redis 저장소 키 접두사
 JWT_REFRESH_STORE_NAME=refreshToken
